log
Thu 21 Mar 2024 08:09:18 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:17: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   47 |     int valor = malloc(sizeof(int));
      |                 ^~~~~~
exercises.c:49:17: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     push(Lista, valor);
      |                 ^~~~~
      |                 |
      |                 int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
70f5dd8
Thu 21 Mar 2024 08:09:27 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:17: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   47 |     int valor = malloc(sizeof(int));
      |                 ^~~~~~
exercises.c:49:17: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     push(Lista, valor);
      |                 ^~~~~
      |                 |
      |                 int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
ec94e46
Thu 21 Mar 2024 08:09:49 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
8d758f1
Thu 21 Mar 2024 08:10:16 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:17: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   51 |     push(Lista, *valor);
      |                 ^~~~~~
      |                 |
      |                 int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
a4f32d2
Thu 21 Mar 2024 08:10:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:10: error: invalid use of incomplete typedef ‘List’
   51 |     push(*Lista, valor);
      |          ^~~~~~
Compilation failed
aa6ae86
Thu 21 Mar 2024 08:10:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c1ccab2
Thu 21 Mar 2024 08:10:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a84fdec
Thu 21 Mar 2024 08:11:14 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
7f206c3
Thu 21 Mar 2024 08:11:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
94f3fa5
Thu 21 Mar 2024 08:15:32 PM UTC: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   63 |     suma += (int *)elemento;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
4ea9a6a
Thu 21 Mar 2024 08:16:00 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
6dc826b
Thu 21 Mar 2024 08:18:49 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
fc0fa15
Thu 21 Mar 2024 08:24:37 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|2
total_score: 40/70
4f52d8e
